AI Update: add ranking and latest news

--- a/index.html
+++ b/index.html
@@ -372,6 +372,16 @@
                             <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold flex items-center">Read More <i class="fas fa-arrow-right ml-2 text-xs"></i></a>
                         </div>
                     </article>
+
+                    <!-- News Article 4 (NEWLY ADDED) -->
+                    <article class="card-glass rounded-xl overflow-hidden hover:scale-105 transition-transform duration-300 ease-in-out">
+                        <img src="https://image.pollinations.ai/prompt/cricket%20stadium%20floodlights%20night%20match%20action?width=800&height=500&nologo=true" alt="Cricket stadium at night" class="w-full h-48 object-cover object-center">
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold text-white mb-3 leading-tight">The Future of Day-Night Test Cricket: Pink Ball Dominance</h3>
+                            <p class="text-gray-400 text-sm mb-4 line-clamp-3">Day-night Test matches are gaining popularity, with the pink ball revolutionizing the longest format. Learn about the challenges, successes, and future prospects of this innovation...</p>
+                            <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold flex items-center">Read More <i class="fas fa-arrow-right ml-2 text-xs"></i></a>
+                        </div>
+                    </article>
                 </div>
                 <div class="text-center mt-12">
                     <a href="#" class="btn-primary inline-flex items-center text-lg">
@@ -437,12 +447,20 @@
                                         <td class="py-3 px-4">3848</td>
                                         <td class="py-3 px-4">107</td>
                                     </tr>
-                                    <tr class="hover:bg-gray-800/50 transition-colors duration-200">
+                                    <tr class="border-b border-gray-700 hover:bg-gray-800/50 transition-colors duration-200">
                                         <td class="py-3 px-4">5</td>
                                         <td class="py-3 px-4 font-medium text-white">New Zealand</td>
                                         <td class="py-3 px-4">38</td>
                                         <td class="py-3 px-4">3964</td>
                                         <td class="py-3 px-4">104</td>
+                                    </tr>
+                                    <!-- NEWLY ADDED RANKING ROW -->
+                                    <tr class="hover:bg-gray-800/50 transition-colors duration-200">
+                                        <td class="py-3 px-4">6</td>
+                                        <td class="py-3 px-4 font-medium text-white">Afghanistan</td>
+                                        <td class="py-3 px-4">25</td>
+                                        <td class="py-3 px-4">2350</td>
+                                        <td class="py-3 px-4">94</td>
                                     </tr>
                                 </tbody>
                             </table>
